Wed Jul  3 12:06:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (maxpow_in_bdigit): Renamed from calc_hbase and return
	  maxpow.

Tue Jul  2 23:47:50 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (roomof): Cast to long.
	  (rb_ull2big): Fix bignew arguments.

Tue Jul  2 21:17:37 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Merge two temporary buffers.

Tue Jul  2 20:25:04 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Use BDIGIT_DBL to collect adjacent digits.
	  (BDIGIT_DBL_MAX): New macro.
	  (maxpow_in_bdigit_dbl): New function.

Tue Jul  2 17:23:33 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* doc/syntax/refinements.rdoc: add description of Module#using and
	  refinement inheritance by module inclusion.

Tue Jul  2 17:22:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h: add EUC-JP and Windows-31J.

	* re.c (rb_char_to_option_kcode): use built-in encoding indexes in
	  internal.h.

	* internal.h: add UTF8-MAC.

	* dir.c (rb_utf8mac_encoding): use built-in encoding indexes in
	  internal.h.

	* internal.h: add UTF-{16,32} dummy encodings.

	* string.c (rb_str_inspect, str_scrub0): use built-in encoding indexes
	  in internal.h.

	* internal.h: add UTF-{16,32}{BE,LE}.

	* io.c (io_strip_bom): use built-in encoding indexes in internal.h.

	* internal.h (rb_{ascii8bit,utf8,usascii}_encindex): use built-in
	  encoding indexes for optimization.

	* encoding.c (enc_inspect, rb_locale_encindex),
	  (enc_set_filesystem_encoding, rb_filesystem_encindex): use built-in
	  encoding indexes directly.

	* encoding.c (rb_enc_set_index, rb_enc_associate_index): validate
	  argument encoding index.

	* include/ruby/encoding.h (ENCODING_SET): use rb_enc_set_index()
	  instead of setting inlined bits directly.

	* encoding.c (rb_enc_init): register preserved indexes.

	* internal.h (ruby_preserved_encindex): move from encoding.c.

Tue Jul  2 11:14:36 2013  Shota Fukumori  <sorah@cookpad.com>
